graph: fix graph rendering (#1780)
* There appears to have been a recent change in how multiple browsers
  measure the "bounding box" of SVG elements.
* This caused graph nodes to be measured much larger than the area
  they actually render to.
* This messed with the graph because we feed these dimensions into GraphViz
  when creating the virtual graph causing the nodes in the virtual graph
  to be given too much space. An error which is subsequently translated
  to the SVG graph.
* The changes in "bounding box" measurement appear to affect
  SVG Symbols and rotations.
* This commit removes the use of SVG symbols (and their related "use"
  elements) and moves the rotation from the circle element to a group.
* The use of SVG symbols made it easier for us to capture click events
  from behind the svgPanZoom layer.
* Removing SVG symbols required changes to the way
  click events are captured in the graph. Note in SVG the click events
  land on graphical elements (i.e. children), not their containing groups
  (i.e. parents).

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -58,11 +58,6 @@ html {
   &:hover {
     cursor: pointer;
   }
-
-  > * {
-    // Prevent click handler from thinking any child elements are the target
-    pointer-events: none;
-  }
 }
 
 .position-relative {
